# clip-retrieval-aizip

./: .gitignore  README_AIZIP.md
aizip_clip_client_packaging/: README.md  pyproject.toml  releasenote.md
aizip_clip_client_packaging/aizip_clip_query/: __init__.py  aizip_clip_query.py
aizip_clip_client_packaging/aizip_clipretrieval_client/: base_query.py  cls_query.py  img_query.py
aizip_clip_client_packaging/src/aizip_clip_query/: aizip_clip_back.py  aizip_clip_query.py
aizip_clip_server_packaging/: LICENSE  pyproject.toml
aizip_clip_server_packaging/aizip_clip_server/: __init__.py  aizip_clip_back.py  aizip_clip_server.py
classifier/: l14_bias.csv  l14_weight.csv
clip_retrieval/: clip_back.py  clip_index.py
clip_retrieval/clip_inference/: main.py  mapper.py  runner.py  worker.py
notebook/: Summary.ipynb  classifier.ipynb  client_api_test.ipynb  client_pkg_test.ipynb  clip-client-query-api.ipynb  clip-retrieval-getting-started.ipynb  clip_backend.ipynb  folderlistextraction.ipynb  index_tune.ipynb  index_tune_convert.ipynb  pkg_test.ipynb  query_evaluation.ipynb  query_http.ipynb
scripts/: api_query.py  classifier.py  clip_backend.py  embedding.py  index.py  query.py  tune_index.py
scripts/logs/: laion400m_i00.txt  laion400m_i01.txt  laion400m_i02.txt  laion400m_i03.txt  laion400m_i04.txt  laion400m_i05.txt  laion400m_i06.txt  laion400m_i07.txt  laion400m_i08.txt  laion400m_i09.txt  laion400m_i10.txt  laion400m_i11.txt  laion400m_i12.txt  laion400m_i13.txt  laion400m_i14.txt  laion400m_i15.txt  laion400m_i16.txt  laion400m_i17.txt  laion400m_i18.txt  laion400m_i19.txt  laion400m_i20.txt  laion400m_i21.txt  laion400m_i22.txt  laion400m_i23.txt  laion400m_i24.txt  laion400m_i25.txt  laion400m_i26.txt  laion400m_i27.txt  laion400m_i28.txt  laion400m_i29.txt  laion400m_i30.txt  laion400m_i31.txt  laion400m_index.txt
scripts/logs/deprecated/: laion400m_all_deprecated.txt  script_test_ssd2_0-2.txt  test_emb_00_img_l14.txt
src/: aizip_clip_back.py
