[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clip_retrieval_aizip"
version = "0.0.2"
authors = [
  { name="Junjie Wu", email="wjjbfbgss@gmail.com" },
]
description = "Library for aizip version of clip retrieval."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aizip/clip_retrieval"
"Bug Tracker" = "https://github.com/aizip/clip_retrieval/issues"