[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Aizip_ClipRetrieval_Client"
version = "0.1.0"
authors = [
  { name="Junjie Wu", email="wjjbfbgss@gmail.com" },
]
description = "Library for aizip version of clip retrieval."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "requests",
    "pandas",
]

[project.urls]
"Homepage" = "https://github.com/aizip/clip_retrieval"
"Bug Tracker" = "https://github.com/aizip/clip_retrieval/issues"