[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aizip_server"
version = "0.0.2"
authors = [
  { name="Junjie Wu", email="wjjbfbgss@gmail.com" },
]
description = "Library for aizip version of clip retrieval server."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "pydantic",
    "typing",
    "flask",
    "flask_restful",
    "pandas",
    "numpy",
    "pyarrow",
    "fsspec",
    "clip_retrieval",
    "fastapi_restful",
    "fastapi",
    "faiss-gpu",
    "python-multipart",
    "uvicorn",
]

[project.urls]
"Homepage" = "https://github.com/aizip/clip_retrieval"
"Bug Tracker" = "https://github.com/aizip/clip_retrieval/issues"